# symbiomon

./: CMakeLists.txt  README.md  setup.py
examples/: CMakeLists.txt  admin.c  client.c  server.c
examples/lulesh/: Makefile  README
examples/lulesh/laptop_run_script/: small-run.sh
examples/lulesh/theta_run_script/: small-run.qsub
examples/lulesh/theta_run_scripts/: cleanup.sh  small-run.qsub  sourceme.sh  spack_symbiomon_recipe.sh
include/symbiomon/: symbiomon-admin.h  symbiomon-backend.h  symbiomon-client.h  symbiomon-common.h  symbiomon-metric.h  symbiomon-provider-handle.h  symbiomon-server.h
src/: CMakeLists.txt  admin.c  admin.h  bedrock-module.c  client.c  client.h  config.h.in  provider.c  provider.cc  provider.h  symbiomon-admin.pc.in  symbiomon-client.pc.in  symbiomon-config.cmake.in  symbiomon-server.pc.in  types.h
src/dummy/: dummy-backend.c  dummy-backend.h
tests/: CMakeLists.txt  test-admin.c  test-client.c
